ash/webui/camera_app_ui/resources/css/main.css
/* ... */
.bottom-stripe {
  bottom: var(--bottom-line);
  position: absolute;
  transform: translateY(50%);
}

.left-stripe {
  left:  var(--left-line);
  opacity: 1;
  position: absolute;
  transform: translateX(-50%);
  transition: opacity var(--fast2-duration) var(--standard-easing);
  visibility: visible;
}

body.taking.video .left-stripe:not(#options-group),
body.taking.video #options-group :not(#open-ptz-panel) {
  opacity: 0;
  transition: visibility 0ms 225ms, opacity 225ms var(--standard-easing);
  visibility: hidden;
}

.right-stripe {
  position: absolute;
  right:  var(--right-line);
  transform: translateX(50%);
}

.horizontal-center-stripe {
  left: 50%;
  position: absolute;
  transform: translateX(-50%);
}

.vertical-center-stripe {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

.top-stripe.right-stripe {
  transform: translate(50%, -50%);
}

.top-stripe.left-stripe {
  transform: translate(-50%, -50%);
}

.top-stripe.horizontal-center-stripe {
  transform: translate(-50%, -50%);
}

.bottom-stripe.right-stripe {
  transform: translate(50%, 50%);
}

.bottom-stripe.left-stripe {
  transform: translate(-50%, 50%);
}

#shutters-group {
  bottom: var(--shutter-vertical-center);
  display: flex;
  flex-direction: column;
  transform: translate(50%, 50%);
}

body.tablet-landscape .actions-group {
  flex-direction: column-reverse;
}

body.doc-mode-reviewing #mode-selector {
  visibility: hidden;
}

#mode-selector {
  --fade-padding: 24px;
  --scrollbar-height: 4px;

  left: calc(var(--left-line) * 2);
  right: calc(var(--right-line) * 2);
}

#mode-selector::before,
#mode-selector::after {
  background: linear-gradient(to right, var(--grey-900), transparent);
  content: '';
  display: block;
  height: calc(100% - var(--scrollbar-height));
  pointer-events: none;
  position: absolute;
  top: 0;
  width: var(--fade-padding);
  z-index: 2;
}

#mode-selector::before {
  left: 0;
}

#mode-selector::after {
  right: 0;
  transform: scaleX(-1);
}

#modes-group {
  display: block;
  overflow: auto;
  padding: 10px 0;
  pointer-events: auto;
  text-align: center;
  user-select: none;
  white-space: nowrap;
}

:is(#start-takephoto, #recordvideo, #video-snapshot):disabled {
  opacity: 0.38;
}

#modes-group::-webkit-scrollbar-thumb {
  background: rgba(255, 255, 255, 0.2);
  border-radius: 2px;
  height: auto;
  width: auto;
}

#modes-group::-webkit-scrollbar {
  height: var(--scrollbar-height);
  width: auto;
}

body:is(.taking.video, .should-handle-intent-result) #modes-group {
  display: none;
}

#modes-group .mode-item {
  display: inline-block;
  font-size: 0; /* Remove space between inline-block. */
  margin: 0 8px;
  position: relative;
}

#modes-group .mode-item.hide {
  display: none;
}

#modes-group .mode-item.first {
  margin-inline-start: var(--fade-padding);
}

#modes-group .mode-item.last {
  margin-inline-end: var(--fade-padding);
}

#modes-group .mode-item input:active {
  /* Don't scale when active to prevent twitching. See b/197583162. */
  transform: none;
}

#modes-group .mode-item:has(input:disabled) {
  opacity: 0.38;
}

div.mode-item>input {
  border-radius: 16px/50%;
}

div.mode-item>span {
  border-radius: 16px/50%;
  color: var(--cros-sys-on_surface);
  display: inline-block;
  font-size: 14px;
  font-weight: 500;
  line-height: 16px;
  padding: 8px 12px;
  position: relative;
  z-index: 0;
}

.mode-item>input {
  height: 100%;
  outline-offset: 7px;
  position: absolute;
  width: 100%;
  z-index: 1;
}

.mode-item>input:checked + span {
  background: var(--cros-sys-primary);
  color: var(--cros-sys-inverse_on_surface);
}

button.shutter {
  display: none;
  height: 60px;
  width: 60px;
  z-index: 1;  /* On top of transforming switch-mode buttons. */
}

body.video #recordvideo,
body:not(.taking):not(.video) #start-takephoto,
body:not(.timer):not(.video) #start-takephoto,
body.taking.timer:not(.video) #stop-takephoto {
  display: inline-block;
}

body:is(:not(.recording), .enable-gif-recording, .should-handle-intent-result) :is(#video-snapshot, #pause-recordvideo) {
  display: none;
}

#video-snapshot-holder {
  bottom: calc(var(--shutter-vertical-center) + 84px);
  transform: translate(50%, 50%);
}

#video-snapshot {
  height: 46px;
  width: 46px;
}

#start-takephoto,
#video-snapshot {
  position: relative;
}

:is(#start-takephoto, #video-snapshot) svg-wrapper {
  color: var(--cros-sys-inverse_surface);
  --secondary-color: white;
}

:is(#start-takephoto, #video-snapshot):enabled:hover::after {
  background: var(--cros-sys-hover_on_prominent);
  border-radius: 50%;
  content: '';
  display: block;
  inset: 0;
  position: absolute;
}

:is(#start-takephoto, #video-snapshot):enabled:active svg-wrapper {
  color: var(--cros-sys-secondary);
}

body.taking #start-takephoto:active {
  transform: unset;
}

#stop-takephoto {
  background-image: url(/images/camera_shutter_photo_stop.svg);
}

#stop-takephoto:hover {
  background-image: url(/images/camera_shutter_photo_stop_hover.svg);
}

#recordvideo {
  --size: 60px;
}

#pause-recordvideo-holder {
  bottom: calc(var(--shutter-vertical-center) - 84px);
  transform: translate(50%, 50%);
}

#pause-recordvideo {
  --size: 46px;
}

#recordvideo,
#pause-recordvideo {
  --dot-size: 25%;
  --duration: 180ms;
  --square-delay: 45ms;
  --square-size: calc(100% / 3);

  background: white;
  border-radius: 50%;
  height: var(--size);
  position: relative;
  transition: var(--duration) var(--standard-easing);
  width: var(--size);
}

:is(#recordvideo, #pause-recordvideo):hover::after {
  background: var(--cros-sys-hover_on_prominent);
  border-radius: 50%;
  content: '';
  display: block;
  inset: 0;
  position: absolute;
}

body.taking.video #recordvideo:hover::after {
  background: var(--cros-sys-hover_on_subtle);
}
/* ... */

